@@ -1,4 +1,4 @@
-# Version 2.05 build 1
+# Version 2.05 build 7
 #
 # Ini style final detailing as much protocol-specific information as possible.
 #
@@ -2403,6 +2403,20 @@ CmdParms=OBC:8
 CmdTranslator=TranslatorWithDevBool(lsb,1,0,7)
 Code.S3C80=3D 91 11 8B 19 87 84 90 20 08 01 00 F7 00 E3 00 F7 00 E3 1B 46 00 F7 04 C2 00 00 00 D6 F1 08 03 E4 04 03 09 04 B0 05 E6 06 BF E6 07 FF E6 08 80 E6 01 03 E6 10 05 F6 01 46 B0 01 E6 10 02 46 29 01 F6 01 46 E6 01 03 E6 10 05 56 29 FE 8D 01 46
 Code.6805-RC16/18=0F 26 11 20 17 B6 84 90 20 08 08 00 7C 7A 00 7C 7A 0D AD 00 02 7C 73 01 00 00 6B 83 3C_66 B6 5A B7 53 B6 5B B7 54 AD 14 B6 53 B7 5A B6 54 B7 5C A6 00 B7 5B CD 01 AF CD 01 89 24 F8 A6 BF B7 5C A6 FF B7 5A A6 80 B7 5B CC 01 AF
+
+[Onkyo Combo]
+PID=01 48
+CmdParms=Sub-Device:8=0, OBC:8=0, OBC2:8=[-1], Style:NEC2|NEC1=0
+CmdTranslator=Translator(0,8,0,comp,lsb) Translator(1,5,8,0,comp,lsb) Translator(1,2,14,6,comp,lsb) Translator(2,8,16,comp,lsb) Translator(3,1,13)
+DefaultCmd=00 00 FF
+CmdIndex=2
+DevParms=Device Code=210
+DeviceTranslator=Translator(lsb,comp,0,8,0)
+FixedData=B4
+Notes=This executor sends NEC1, NEC2 and NEC1-f16 signals.  It uses one device code but allows almost all \
+    sub-device, OBC and OBC2 combinations.  The only restriction is that it doesn't support OBCs between \
+    32 and 63, which are not used by Onkyo anyway.
+Code.S3C80= 43 8B 13 8B 12 CF 4D 08 08 01 21 00 FD 01 21 03 30 D2 DC 11 94 08 B6 68 05 46 05 04 37 64 03 8D 01 46 E6 29 45 8D 01 49
 
 [OrtekMCE]
 PID=01 ED
@@ -5873,6 +5887,10 @@ Code.S3C80=3D 91 31 8B 13 87 49 08 08 00 FF 00 F8 00 FF 03 10 4C 87 10 82 08 26 
 Code.740=0B 1A 31 80 0F E1 78 14 08 08 01 9B 02 FF 31 EA 42 06 69 02 20 00 FF 3C 62 7F 4C 00 FF
 Code.6805-RC16/18=0F 26 31 20 11 87 49 08 08 00 7F 86 01 7F 92 26 4E 00 84 40 1E 08 CC 01 AF
 Code.HCS08=20 15 1F 4A 31 87 49 08 08 01 00 01 0C 01 00 03 24 4C 9B 10 81 08 3A CC FF 5F
+
+[pid: 00 FD]
+PID=00 FD
+Code.HCS08= 20 15 22 47 11 85 40 04 08 00 B3 02 1C 00 B3 02 1C 15 CC 02 18 00 B4 B6 61 CA 00 D5 B7 61 55 76 35 8A 55 78 35 8C 3C AE 55 70 35 92 55 72 35 94 3C AF 6E 07 57 AD 12 3B 57 FB 6E 2F 69 AD 0A 3A 69 27 05 CD FF 92 25 F5 81 6E 02 56 CD FF 5F 3B 56 FA 81
 
 [pid: 00 FE]
 PID=00 FE
